# report-generator

./: .gitignore  README.md  generate.py  pyproject.toml  requirements.txt
config/: config.ini  config.py
data/: generator.py  parser.py
gui/: frame.py
