[project]
name = "report-generator"
version = "0.1.0"
description = "Utility accounting program to generate reports"
license = { text = "MIT" }
readme = "README.md"

# No python upper bound for package metadata
requires-python = ">=3.11,<4"

authors = [
    { name = "Marius Tahce", email = "mariusalexandrutache@gmail.com" },
]

dependencies = [
    "wxpython (>=4.2.3,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "dbfread (>=2.0.7,<3.0.0)", # should remove this after switching to Firebird
    "firebird-driver (>=2.0.2,<3.0.0)",
    "firebird-lib (>=2.0.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "config" },
    { include = "data" },
    { include = "database" },
    { include = "gui" }
]